--- a/yaapp/locale/fr/LC_MESSAGES/django.po
+++ b/yaapp/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-14 18:34+0100\n"
+"POT-Creation-Date: 2012-03-30 14:54+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -34,46 +34,108 @@ msgstr "Erreur 500"
 msgid "Internal error."
 msgstr "Erreur interne."
 
+#: templates/base.html:45
+msgid "available on appstore"
+msgstr "disponible sur l'appstore"
+
+#: templates/base.html:52
+#: templates/web/menu.html:16
+msgid "Logout"
+msgstr "Se déconnecter"
+
 #: templates/account/login.html:4
+#: templates/account/login.html.py:11
+#: templates/account/login.html:47
 #: templates/web/index.html:4
 #: templates/web/menu.html:19
 msgid "Login"
 msgstr "Se connecter"
 
-#: templates/account/login.html:23
-#: templates/web/index.html:23
-#: templates/yabase/buy_link_not_found.html:23
-#: templates/yabase/listen.html:38
-#: templates/yabase/listen.html.py:41
-msgid "Radio logo"
-msgstr "Logo de la radio"
+#: templates/account/login.html:12
+msgid "Please choose your prefered login method below"
+msgstr "Veuillez sélectionner votre méthode d'authentification ci-dessous"
 
-#: templates/account/login.html:32
-msgid "Login required"
-msgstr "Identification nécessaire"
+#: templates/account/login.html:21
+msgid "Social login services"
+msgstr "Authentification via un réseau social"
 
-#: templates/account/login.html:33
-msgid "You must be logged to access this ressource."
-msgstr "Vous devez être connecté pour accéder à cette ressource."
+#: templates/account/login.html:44
+msgid "Login using existing account"
+msgstr "S'authentifier en utilisant un compte existant"
 
-#: templates/account/login.html:36
-msgid "Please click here to login"
-msgstr "Veuillez cliquer ici pour vous connecter."
+#: templates/account/login.html:48
+msgid "Lost password ?"
+msgstr "Mot de passe perdu ?"
 
-#: templates/account/login.html:45
-#: templates/web/index.html:41
-#: templates/yabase/buy_link_not_found.html:42
-#: templates/yabase/listen.html:84
-msgid "available on appstore"
-msgstr "disponible sur l'appstore"
+#: templates/account/login.html:55
+msgid "Create a new account"
+msgstr "Créer un nouveau compte"
 
-#: templates/account/login.html:52
-#: templates/web/index.html:48
-#: templates/web/menu.html:16
-#: templates/yabase/buy_link_not_found.html:49
-#: templates/yabase/listen.html:91
-msgid "Logout"
-msgstr "Se déconnecter"
+#: templates/account/login.html:58
+msgid "Register"
+msgstr "Creer un compte"
+
+#: templates/account/password_reset_confirm.html:4
+#: templates/account/password_reset_form.html:4
+msgid "Password reset"
+msgstr "Réinitialisation du mot de passe"
+
+#: templates/account/password_reset_confirm.html:10
+msgid "Reset password confirmation"
+msgstr "Confirmation de la réinitialisation"
+
+#: templates/account/password_reset_confirm.html:17
+#: templates/account/password_reset_form.html:16
+msgid "Reset"
+msgstr "Réinitialiser"
+
+#: templates/account/password_reset_confirm.html:21
+msgid "The password reset link was invalid"
+msgstr "Le lien de réinitialisation du mot de passe est invalide"
+
+#: templates/account/password_reset_form.html:10
+msgid "Reset password"
+msgstr "Réinitialiser le mot de passe"
+
+#: templates/account/registered.html:4
+#: templates/account/registered.html:10
+msgid "Registration processing"
+msgstr "Enregistrement en cours"
+
+#: templates/account/registered.html:14
+#, python-format
+msgid ""
+"\n"
+"\t\t\t\tThank your for registering, an email has been sent to %(email)s to "
+"complete process.\n"
+"\t\t\t\t"
+msgstr "\n"
+"\t\t\t\t"
+"Merci pour votre inscription, un email vient d'être envoyé à %(email)s afin de compléter le processus.\n"
+"\t\t\t\t"
+
+#: templates/emailconfirmation/confirm_email.html:4
+#: templates/emailconfirmation/confirm_email.html:10
+msgid "Email confirmation"
+msgstr "Confirmation d'email"
+
+#: templates/emailconfirmation/confirm_email.html:16
+msgid "Invalid confirmation key."
+msgstr "Clef de confirmation invalide"
+
+#: templates/emailconfirmation/email_confirmation_message.txt:1
+#, python-format
+msgid ""
+"Somebody at %(site_name)s has given this as an email address.\n"
+"\n"
+"To confirm this is correct, go to %(activate_url)s\n"
+msgstr "Une personne sur le site %(site_name)s a indiqué cette adresse email afin de s'inscrire.\n."
+"Pour valider cette adresse, veuillez aller sur %(activate_url)s\n"
+
+#: templates/emailconfirmation/email_confirmation_subject.txt:1
+#, python-format
+msgid "Confirm email address for %(site_name)s"
+msgstr "Confirmer l'email pour %(site_name)s"
 
 #: templates/web/base.html:7
 #: templates/web/favorite.html:6
@@ -116,7 +178,7 @@ msgstr "Arrêter"
 #: templates/web/friends.html:17
 #: templates/web/my_radio.html:3
 #: templates/web/selections.html:17
-#: templates/yabase/listen.html:21
+#: templates/yabase/listen.html:22
 msgid "Listening to"
 msgstr "Ecoute de"
 
@@ -143,11 +205,18 @@ msgstr "En live"
 msgid "Nothing for now"
 msgstr "Rien pour le moment"
 
-#: templates/web/index.html:32
+#: templates/web/index.html:12
+#: templates/yabase/buy_link_not_found.html:12
+#: templates/yabase/listen.html:30
+#: templates/yabase/listen.html.py:33
+msgid "Radio logo"
+msgstr "Logo de la radio"
+
+#: templates/web/index.html:21
 msgid "Coming soon"
 msgstr "Prochainement"
 
-#: templates/web/index.html:33
+#: templates/web/index.html:22
 msgid "Yasound is coming soon."
 msgstr "Yasound arrive prochainement."
 
@@ -193,7 +262,7 @@ msgid "Welcome"
 msgstr "Bienvenue"
 
 #: templates/web/radio.html:5
-#: templates/yabase/listen.html:57
+#: templates/yabase/listen.html:49
 msgid "By"
 msgstr "Par"
 
@@ -242,27 +311,79 @@ msgstr "Chargement de l'application..."
 msgid "Backoffice loading..."
 msgstr "Chargement du backoffice..."
 
+#: templates/yabackoffice/keyfigures.html:3
+msgid "Key figures"
+msgstr "Chiffres clef"
+
+#: templates/yabackoffice/keyfigures.html:8
+msgid "Figure"
+msgstr "Indicateur"
+
+#: templates/yabackoffice/keyfigures.html:11
+msgid "Value"
+msgstr "Valeur"
+
+#: templates/yabackoffice/keyfigures.html:18
+msgid "User count"
+msgstr "Nombre d'utilisateurs"
+
+#: templates/yabackoffice/keyfigures.html:26
+msgid "Radio count"
+msgstr "Nombre de radios"
+
+#: templates/yabackoffice/keyfigures.html:34
+msgid "Radio count (ready)"
+msgstr "Nombre de radios (actives)"
+
+#: templates/yabackoffice/keyfigures.html:42
+msgid "Uploaded songs"
+msgstr "Chansons envoyées sur le serveur"
+
+#: templates/yabackoffice/keyfigures.html:50
+msgid "Message count"
+msgstr "Nombre de message"
+
+#: templates/yabackoffice/keyfigures.html:58
+msgid "Like count"
+msgstr "Nombre de Like"
+
+#: templates/yabackoffice/keyfigures.html:66
+msgid "Favorites count"
+msgstr "Nombre de favoris"
+
+#: templates/yabackoffice/keyfigures.html:74
+msgid "Yasound friend count"
+msgstr "Nombre d'amis Yasound"
+
+#: templates/yabackoffice/keyfigures.html:82
+msgid "Total Friend count"
+msgstr "Nombre total d'amis"
+
+#: templates/yabackoffice/keyfigures.html:90
+msgid "Listening time"
+msgstr "Temps d'écoute"
+
 #: templates/yabase/buy_link_not_found.html:4
 msgid "Sorry, item not available"
 msgstr "Désolé, ce morceau n'est pas disponible"
 
-#: templates/yabase/buy_link_not_found.html:32
+#: templates/yabase/buy_link_not_found.html:21
 msgid "Item unavailable for purchase"
 msgstr "Morceau indisponible pour achat"
 
-#: templates/yabase/buy_link_not_found.html:33
+#: templates/yabase/buy_link_not_found.html:22
 msgid "This item cannot be purchased right now, try later."
 msgstr "Ce morceau ne peut être acheté actuellement, veuillez réessayer plus tard."
 
-#: templates/yabase/listen.html:53
+#: templates/yabase/listen.html:45
 msgid "Track logo"
 msgstr "Logo du morceau"
 
-#: templates/yabase/listen.html:56
+#: templates/yabase/listen.html:48
 msgid "No name"
 msgstr "Sans nom"
 
-#: templates/yabase/listen.html:68
+#: templates/yabase/listen.html:60
 msgid "Buy on iTunes"
 msgstr "Acheter sur iTunes"
 
