Added a link on mobile website to go back to regular website

--- a/yaapp/apps/yaweb/locale/fr/LC_MESSAGES/django.po
+++ b/yaapp/apps/yaweb/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-27 06:52+0200\n"
+"POT-Creation-Date: 2012-04-06 09:28+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -151,6 +151,10 @@ msgstr "YASOUND | Ma radio, c'est moi"
 #: templates/yaweb/index_mobile.html:23
 msgid "With Yasound, <br/>turn your smartphone into a radio station."
 msgstr "Avec Yasound, <br/>transformez votre mobile en station de radio."
+
+#: templates/yaweb/index_mobile.html:42
+msgid "Go to full website"
+msgstr "Accéder au site complet"
 
 #: templates/yaweb/jobs.html:13
 msgid ""
