--- a/yaapp/apps/yabase/locale/fr/LC_MESSAGES/django.po
+++ b/yaapp/apps/yabase/locale/fr/LC_MESSAGES/django.po
@@ -140,12 +140,12 @@ msgstr ""
 
 #: models.py:277
 msgid "song"
-msgstr ""
+msgstr "chanson"
 
 #: models.py:278
 #: models.py:1109
 msgid "user"
-msgstr ""
+msgstr "utilisateur"
 
 #: models.py:286
 msgid "Song user"
@@ -153,7 +153,7 @@ msgstr ""
 
 #: models.py:473
 msgid "creator"
-msgstr ""
+msgstr "créateur"
 
 #: models.py:474
 #: models.py:1422
@@ -180,15 +180,15 @@ msgstr ""
 
 #: models.py:1424
 msgid "name"
-msgstr ""
+msgstr "nom"
 
 #: models.py:1425
 msgid "description"
-msgstr ""
+msgstr "description"
 
 #: models.py:1426
 msgid "activated"
-msgstr ""
+msgstr "activé"
 
 #: models.py:1440
 #: models.py:1443
