--- a/yaapp/apps/yaweb/locale/fr/LC_MESSAGES/django.po
+++ b/yaapp/apps/yaweb/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-10 07:18+0200\n"
+"POT-Creation-Date: 2012-06-21 14:24+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -301,7 +301,19 @@ msgstr "Revue de presse (mars 2012)"
 msgid "Weblogs review (march 2012)"
 msgstr "Revue de web (mars 2012)"
 
-#: templates/yaweb/press.html:74
+#: templates/yaweb/press.html:70
+msgid "Press review (april 2012)"
+msgstr "Revue de presse (avril 2012)"
+
+#: templates/yaweb/press.html:71
+msgid "Weblogs review (april 2012)"
+msgstr "Revue de web (avril 2012)"
+
+#: templates/yaweb/press.html:72
+msgid "Press and weblogs review (may 2012)"
+msgstr "Revue de press & web (mai 2012)"
+
+#: templates/yaweb/press.html:77
 msgid "For the Media"
 msgstr "Pour la presse"
 
