--- a/yaapp/locale/fr/LC_MESSAGES/django.po
+++ b/yaapp/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-07 17:29+0200\n"
+"POT-Creation-Date: 2012-08-07 18:23+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -968,9 +968,34 @@ msgstr "Top"
 msgid "Favorites"
 msgstr "Favoris"
 
-#: templates/yabase/app/common/subMenu.mustache:37
+#: templates/yabase/app/common/subMenu.mustache:38
 msgid "Create radio"
 msgstr "Créer une radio"
+
+#: templates/yabase/app/favorites/favoritesPage.mustache:12
+#: templates/yabase/app/friends/friendsPage.mustache:12
+msgid "You are not authenticated"
+msgstr "Vous n'êtes pas authentifié"
+
+#: templates/yabase/app/favorites/favoritesPage.mustache:17
+#: templates/yabase/app/friends/friendsPage.mustache:17
+#, python-format
+msgid ""
+"\n"
+"    <p class='lead'>    \n"
+"    If you already have an account, enter them on the <a "
+"href='%(login_url)s'>login page</a>.\n"
+"    </p>\n"
+"    <p class='lead'>    \n"
+"    Already registered but you lost your credentials ? Go to the <a "
+"href='%(lost_password_url)s'>lost password page</a>.\n"
+"    </p>\n"
+"    <p class='lead'>    \n"
+"    No account yet? Get on the <a href='%(signup_url)s'>registration page</"
+"a> and join yasound in a few minutes.\n"
+"    </p>\n"
+"    "
+msgstr ""
 
 #: templates/yabase/app/favorites/userFavoritesPage.mustache:3
 #: templates/yabase/app/friends/userFriendsPage.mustache:3
